chore: JavaのバージョンをJava17に沿うように変更